hphp/hack/test/typecheck/classname/new.php.like_types.exp
File "new.php", line 18, characters 3-16:
  <expr#1> as T
File "new.php", line 24, characters 3-16:
  <expr#1> as T
File "new.php", line 30, characters 3-16:
  <expr#1> as Td
File "new.php", line 47, characters 5-18:
  <expr#1> as T
File "new.php", line 17, characters 15-20:
Can't use new on classname<I>; __construct arguments are not guaranteed to be consistent in child classes (Typing[4060])
File "new.php", line 16, characters 25-25:
This declaration is neither final nor uses the <<__ConsistentConstruct>> attribute
